--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    title GitHub Label Drill Down Viewer
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     css:
       .btn { margin-top: 4px; margin-bottom: 4px; margin-right: 8px; }
