--- a/views/layout.slim
+++ b/views/layout.slim
@@ -2,11 +2,12 @@ doctype html
 html
   head
     title GitHub Label Drill Down Viewer
+    meta name="viewport" content="width=device-width, initial-scale=1"
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     css:
       .btn { margin-top: 4px; margin-bottom: 4px; margin-right: 8px; }
 
   body
     .container
-      h1 Labels
+      h1 GitHub Label Drill Down Viewer
       == yield
