--- a/views/layout.slim
+++ b/views/layout.slim
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title GitHub Label Drill Down Viewer
+    title = "GitHub Label Drill Down Viewer - #{repo}"
     meta name="viewport" content="width=device-width, initial-scale=1"
     link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
     css:
@@ -9,5 +9,5 @@ html
 
   body
     .container
-      h1 GitHub Label Drill Down Viewer
+      h1 == "GitHub Label Drill Down Viewer - #{repo_link_tag}"
       == yield
